# tomara_q_de_certo

./: README.md  dockerfile
DiscordSoundHub-1/: Dockerfile  HEROKU_DEPLOY.md  Procfile  README.md  app.py  app.py.backup  app.py.bak  app.py.new  app.py.old  ativar_bot.py  database.py  fix_routes.py  fix_routes_line_by_line.py  main.py  pyproject.toml  replit.nix  utils.py  web_server.py
DiscordSoundHub-1/attached_assets/: Pasted--usr-bin-env-python3-Script-aut-nomo-SOMENTE-para-iniciar-o-bot-Discord-sem-qualquer-importa--1743030265764.txt
DiscordSoundHub-1/audios/: audios_db.json
DiscordSoundHub-1/cogs/: activation.py  activation.py.bak  activation_settings.json  activation_status.json  editor.py  player.py  storage.py  ui.py  ui.py.bak
DiscordSoundHub-1/templates/: audio_detail.html  base.html  edit.html  index.html  share.html  upload.html
